# multi_stream_with_ai

./: .gitignore  CMakeLists.txt  README.md  Readme.md  var-deploy-gdb.sh
app_stream/: MeraDrpRuntimeWrapper.cpp  PreRuntime.cpp  PreRuntime.h  ai_parsers.cpp  inf_thread.cpp  inference.h  main.cpp  media.cpp  media.h  stream.h  stream_thread.cpp
common/inc/: isu.h  mmngr.h  omx.h  queue.h  v4l2.h
common/src/: isu.c  r_mmngr.c  util.c  v4l2.c
gst_capture2/: log.txt  main.cpp
toolchain/: runtime.cmake
